2004-04-19  Filip Miletic  <f.miletic@ewi.tudelft.nl>

	* language.php ($lang): More translations.
