@@ -81,35 +81,35 @@ $lang=Array(
 "Unknown language" => "Непознат језик",
 "Fatal error: setting next activity to an unexisting activity" => "Тешка грешка: постављам следећу активност на непостојећу",
 "Fatal error: nextActivity does not match any candidate in autorouting switch activity" => "Тешка грешка: следећа активност се не поклапа ни са једном могућом",
-"Fatal error: non-deterministic decision for autorouting activity" => "Тешка грешка: недетерминистичка одлука при аутоматском усмеравању",
-"Fatal error: trying to send an instance to an activity but no transition found" => "Fatal error: trying to send an instance to an activity but no transition found",
-"Cannot add transition only split activities can have more than one outbound transition" => "Cannot add transition only split activities can have more than one outbound transition",
-"Circular reference found some activity has a transition leading to itself" => "Circular reference found some activity has a transition leading to itself",
-"Process does not have a start activity" => "Process does not have a start activity",
-"Process does not have exactly one end activity" => "Process does not have exactly one end activity",
-"End activity is not reachable from start activity" => "End activity is not reachable from start activity",
-" is interactive but has no role assigned" => " is interactive but has no role assigned",
-" is non-interactive and non-autorouted but has no role assigned" => " is non-interactive and non-autorouted but has no role assigned",
-" is standalone but has transitions" => " is standalone but has transitions",
-" is not mapped" => " is not mapped",
-"Activity '.\$res['name'].' is standalone and is using the \$instance object" => "Activity '.\$res['name'].' is standalone and is using the \$instance object",
-"Activity '.\$res['name'].' is interactive so it must use the \$instance->complete() method" => "Activity '.\$res['name'].' is interactive so it must use the \$instance->complete() method",
-"Activity '.\$res['name'].' is non-interactive so it must not use the \$instance->complete() method" => "Activity '.\$res['name'].' is non-interactive so it must not use the \$instance->complete() method",
-"Activity '.\$res['name'].' is switch so it must use \$instance->setNextActivity(\$actname) method" => "Activity '.\$res['name'].' is switch so it must use \$instance->setNextActivity(\$actname) method",
-"Process %d has been activated" => "Process %d has been activated",
-"Process %d has been deactivated" => "Process %d has been deactivated",
-"Process %s %s imported" => "Process %s %s imported",
-"Process %s removed" => "Process %s removed",
-"Process %s has been updated" => "Process %s has been updated",
-"Process %s has been created" => "Process %s has been created",
-"Fatal error: cannot execute automatic activity \$activityId" => "Fatal error: cannot execute automatic activity \$activityId",
-"%A %d of %B, %Y" => "%A %d of %B, %Y",
-"%A %d of %B, %Y[%H:%M:%S %Z]" => "%A %d of %B, %Y[%H:%M:%S %Z]",
+"Fatal error: non-deterministic decision for autorouting activity" => "Тешка грешка: недетерминистичка одлука при аутоматском усмеравању (ако они знају шта значи ово што су написали, капу скидам!)",
+"Fatal error: trying to send an instance to an activity but no transition found" => "Тешка грешка: програм је покушао да пошаље инстанцу активности, али прелаз није пронађен (стварно појма немам шта ово може да значи!)",
+"Cannot add transition only split activities can have more than one outbound transition" => "Не може се доадти транзиција. Само подељене активности могу имати више од једне излазне транзиције",
+"Circular reference found some activity has a transition leading to itself" => "Пронађена је кружна референца. Нека активност има транзицију која показује на њу саму",
+"Process does not have a start activity" => "Процес нема стартну активност",
+"Process does not have exactly one end activity" => "Процес нема тачно једну крајњу активност",
+"End activity is not reachable from start activity" => "Крајња активност се не може досегнути из почетне",
+" is interactive but has no role assigned" => " је интерактивна, али нема додељену улогу",
+" is non-interactive and non-autorouted but has no role assigned" => " је не-интерактивна и не рутира се аутоматски, али нема додељену улогу",
+" is standalone but has transitions" => " је самостална, али нема транзиција.",
+" is not mapped" => " није мапирана",
+"Activity '.\$res['name'].' is standalone and is using the \$instance object" => "Активност '.\$res['name'].' је самостална и користи објекат \$instance",
+"Activity '.\$res['name'].' is interactive so it must use the \$instance->complete() method" => "Активност '.\$res['name'].' је интерактивна и зато мора да користи метод \$instance->complete()",
+"Activity '.\$res['name'].' is non-interactive so it must not use the \$instance->complete() method" => "Активност '.\$res['name'].' није интерактивна и зато не сме користити метод \$instance->complete()",
+"Activity '.\$res['name'].' is switch so it must use \$instance->setNextActivity(\$actname) method" => "Активност '.\$res['name'].' је прекидач и зато мора да користи метод \$instance->setNextActivity(\$actname)",
+"Process %d has been activated" => "Процес %d је покренут",
+"Process %d has been deactivated" => "Процес %d је обустављен",
+"Process %s %s imported" => "Процес %s %s је увезен",
+"Process %s removed" => "Процес %s је уклоњен",
+"Process %s has been updated" => "Процес %s је ажуриран",
+"Process %s has been created" => "Процес %s је створен",
+"Fatal error: cannot execute automatic activity \$activityId" => "Тешка грешка: аутоматизована активност \$activityId није извршена",
+"%A %d of %B, %Y" => "%A %d од %B, %Y",
+"%A %d of %B, %Y[%H:%M:%S %Z]" => "%A %d од %B, %Y[%H:%M:%S %Z]",
 "%H:%M:%S %Z" => "%H:%M:%S %Z",
-"%a %d of %b, %Y" => "%a %d of %b, %Y",
-"%a %d of %b, %Y[%H:%M %Z]" => "%a %d of %b, %Y[%H:%M %Z]",
+"%a %d of %b, %Y" => "%a %d од %b, %Y",
+"%a %d of %b, %Y[%H:%M %Z]" => "%a %d од %b, %Y[%H:%M %Z]",
 "%H:%M %Z" => "%H:%M %Z",
-"Display Tiki objects that have not been categorized" => "Display Tiki objects that have not been categorized",
+"Display Tiki objects that have not been categorized" => "Прикажи објекте у Тикију који немају додељену категорију",
 "Displays a snippet of code" => "Приказује исечак кода",
 "note: those parameters are exclusive" => "ПАЖЊА: параметри се међусобно искључују",
 "Creates a definition list" => "Прави списак дефиниција",
@@ -121,68 +121,68 @@ $lang=Array(
 "column" => "колона",
 "Run a sql query" => "Покрени SQL упит",
 "sql query" => "sql упит",
-"Automatically creates a link to the appropriate SourceForge object" => "Automatically creates a link to the appropriate SourceForge object",
-"Include a page" => "Include a page",
-"Insert theme styled aligned box on wiki page" => "Insert theme styled aligned box on wiki page",
-"Include an article" => "Include an article",
-"List all pages which link to specific pages" => "List all pages which link to specific pages",
-"Search the titles of all pages in this wiki" => "Search the titles of all pages in this wiki",
-"No pages found for title search" => "No pages found for title search",
-"One page found for title search" => "One page found for title search",
-" pages found for title search" => " pages found for title search",
-"No categories defined" => "No categories defined",
-"Newest first" => "Newest first",
-"Oldest first" => "Oldest first",
-"Reply to parent comment" => "Reply to parent comment",
-"Message Broadcast" => "Message Broadcast",
-"View tpl" => "View tpl",
-"edit article tpl" => "edit article tpl",
-"edit template" => "edit template",
-"Compose Message" => "Compose Message",
-"compose message tpl" => "compose message tpl",
-"messages tpl" => "messages tpl",
-"Maps" => "Maps",
-"Fields to display:" => "Fields to display:",
-"View articles" => "View articles",
-"Featured Help" => "Featured Help",
-"SearchStats" => "SearchStats",
-"Live Support" => "Live Support",
-"HTML Pages" => "HTML Pages",
-"Help System" => "Help System",
-"Show Category Path" => "Show Category Path",
-"Show Babelfish Translation URLs" => "Show Babelfish Translation URLs",
-"Show Category Objects" => "Show Category Objects",
-"Show Babelfish Translation Logo" => "Show Babelfish Translation Logo",
-"Show Module Controls" => "Show Module Controls",
-"Tiki Calendar" => "Tiki Calendar",
-"AutoLinks" => "AutoLinks",
-"Hotwords in New Windows" => "Hotwords in New Windows",
-"Custom Home" => "Custom Home",
-"Dynamic Content System" => "Dynamic Content System",
-"Allow Smileys" => "Allow Smileys",
-"Banning System" => "Banning System",
+"Automatically creates a link to the appropriate SourceForge object" => "Аутоматски поставља везу на одговарајући објекат на месту SourceForge",
+"Include a page" => "Убаци страницу",
+"Insert theme styled aligned box on wiki page" => "Убаци уравнату и стилски уобчичену кућицу на вики страну",
+"Include an article" => "Убаци чланак",
+"List all pages which link to specific pages" => "Испиши све странице са везом на одређену страну",
+"Search the titles of all pages in this wiki" => "Претражи наслове свих страна на овом викију",
+"No pages found for title search" => "Ниједна страна нема наслов који одговара упиту",
+"One page found for title search" => "Пронађена је једна страна за упит по наслову",
+" pages found for title search" => " пронађено страна за упит по наслову",
+"No categories defined" => "Не постоји ниједна категорија",
+"Newest first" => "Најновије на почетак",
+"Oldest first" => "Најстарије на почетак",
+"Reply to parent comment" => "Одговори на надређену примедбу",
+"Message Broadcast" => "Разгласи поруку",
+"View tpl" => "Погледај tpl",
+"edit article tpl" => "Измени tpl за чланак",
+"edit template" => "Уреди образац",
+"Compose Message" => "Састави поруку",
+"compose message tpl" => "tpl за састав поруке",
+"messages tpl" => "tpl за поруке",
+"Maps" => "Мапе",
+"Fields to display:" => "Прикажи поља:",
+"View articles" => "Преглед чланака",
+"Featured Help" => "Помоћ",
+"SearchStats" => "Статистике претраге",
+"Live Support" => "Подршка уживо",
+"HTML Pages" => "HTML стране",
+"Help System" => "Помоћ",
+"Show Category Path" => "Прикажи след категорија",
+"Show Babelfish Translation URLs" => "Прикажи URL ознаке за преводилац BabelFish",
+"Show Category Objects" => "Прикажи објекте категорија",
+"Show Babelfish Translation Logo" => "Прикажи логотип за Babelfish",
+"Show Module Controls" => "Прикажи контроле за модуле",
+"Tiki Calendar" => "Tiki календар",
+"AutoLinks" => "АутоВезе",
+"Hotwords in New Windows" => "Вруће речи у новом прозору",
+"Custom Home" => "Посебна насловна страна",
+"Dynamic Content System" => "Систем за динамички садржај",
+"Allow Smileys" => "Дозволи смајлије",
+"Banning System" => "Систем забрана",
 "PHPOpenTracker" => "PHPOpenTracker",
-"Contact Us" => "Contact Us",
-"User Preferences Screen" => "User Preferences Screen",
-"Users can Configure Modules" => "Users can Configure Modules",
-"User Watches" => "User Watches",
-"User Notepad" => "User Notepad",
-"Use group homepages" => "Use group homepages",
-"Disallow access to the site (except for those with permission)" => "Disallow access to the site (except for those with permission)",
-"Message to display when site is closed" => "Message to display when site is closed",
-"Disallow access when load is above the threshold (except for those with permission)" => "Disallow access when load is above the threshold (except for those with permission)",
-"Max average server load threshold in the last minute" => "Max average server load threshold in the last minute",
-"Message to display when server is too busy" => "Message to display when server is too busy",
-"Store session data in database" => "Store session data in database",
-"Session lifetime in minutes" => "Session lifetime in minutes",
-"Use proxy" => "Use proxy",
-"Proxy Host" => "Proxy Host",
-"Proxy port" => "Proxy port",
-"full path to mapfiles" => "full path to mapfiles",
-"default mapfile" => "default mapfile",
-"Wiki Page for Help" => "Wiki Page for Help",
-"Wiki Page for Comments" => "Wiki Page for Comments",
-"Feed for mapfiles" => "Feed for mapfiles",
+"Contact Us" => "Пишите нам",
+"User Preferences Screen" => "Корисничка подешавања",
+"Users can Configure Modules" => "Корисници могу да подешавају модуле",
+"User Watches" => "Корисникови маркери",
+"User Notepad" => "Корисников нотес",
+"Use group homepages" => "Почетне стране за групу",
+"Disallow access to the site (except for those with permission)" => "Забрани приступ (осим корисницима са посебном дозволом)",
+"Message to display when site is closed" => "Прикажи ову поруку када је место затворено",
+"Disallow access when load is above the threshold (except for those with permission)" => "Забрани приступ када је систем преоптерећен (осим корисницима са посебном дозволом)",
+"Max average server load threshold in the last minute" => "Највеће дозвољено средње оптерећење сервера у минуту",
+"Message to display when server is too busy" => "Прикажи ову поруку када је сервер преоптерећен",
+"Store session data in database" => "Податке о сесији записуј у базу података",
+"Session lifetime in minutes" => "Време трајања сесије у минутима",
+"Use proxy" => "Користи заступника",
+"Proxy Host" => "Адреса заступника",
+"Proxy port" => "Порт заступника",
+"full path to mapfiles" => "пуна стаза за датотеке мапа",
+"default mapfile" => "подразумевана датотека мапа",
+"Wiki Page for Help" => "Вики страна за помоћ",
+"Wiki Page for Comments" => "Вики страна за коментаре",
+"Feed for mapfiles" => "Извор за датотеке мапа",
 "Strict allows page names with only letters, numbers, underscore, dash, period and semicolon (dash, period and semicolon not allowed at the beginning and the end)." => "Strict allows page names with only letters, numbers, underscore, dash, period and semicolon (dash, period and semicolon not allowed at the beginning and the end).",
 "Full adds accented characters." => "Full adds accented characters.",
 "Complete allows <em>anything at all</em>.  I (<a\n    href=\"http:tikiwiki.org/tiki-index.php?page=UserPagerlpowell\">rlpowell</a>)\n    cannot guarantee that it is bug-free or secure." => "Complete allows <em>anything at all</em>.  I (<a\n    href=\"http:tikiwiki.org/tiki-index.php?page=UserPagerlpowell\">rlpowell</a>)\n    cannot guarantee that it is bug-free or secure.",
