@@ -1,3 +1,7 @@
+2004-04-24  Filip Miletic  <f.miletic@ewi.tudelft.nl>
+
+	* language.php ($lang): Yet more translations.
+
 2004-04-19  Filip Miletic  <f.miletic@ewi.tudelft.nl>
 
 	* language.php ($lang): More translations.
